@@ -269,3 +269,4 @@ Revision	Version Updated		Log Message
 248		C++			Assign converted military leaders to their converted armies/navies
 249		C++			Provinces with high-level EU3 forts or shipyards get level 1 V2 forts or shipyards
 250		C++			Assign slightly more reasonable starting cash reserves for pops
+251		C++			Put some small starting reserves in the national bank (bigger with the national bank NI)
